# cmake_multi

./: .gitignore  README.md
app-one/: CMakeLists.txt  main-one.cpp
app-one/cmn-lib-one/: cmn-lib-print.cpp  cmn-lib-print.hpp
app-one/cmn-lib-two/: cmn-lib-print.cpp  cmn-lib-print.hpp
app-two/: CMakeLists.txt  main-two.cpp
app-two/cmn-lib-one/: cmn-lib-add.hpp  cmn-lib-print.hpp
app-two/cmn-lib-two/: cmn-lib-mul.hpp
